--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,3 +1,4 @@
+    <!-- 
 <!doctype html>
 <html lang="{{ page.lang | default: site.lang }}">
   <head>
@@ -7,7 +8,8 @@
     {% seo %}
 
     <link rel="icon" href="https://avatars0.githubusercontent.com/u/1797320" type="image/x-icon" title="scottcgi">
-    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision |
+    relative_url }}">
     
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -44,3 +46,4 @@
       <p>{{ site.copyright | default: "copyright not found in _config.yml" }}</p>
     </footer>
   </body>
+    -->
