页面结构修改完毕

--- a/docs/_layouts/page.html
+++ b/docs/_layouts/page.html
@@ -13,8 +13,7 @@ layout: default
     {{ content }}
 
   </article>
-
-  {% if page.aside == true %}{% include site-aside.html %}{% endif %}
+  {% include site-aside.html align="right" %}
 
 </main>
 
