--- a/docs/_includes/post-list.html
+++ b/docs/_includes/post-list.html
@@ -4,11 +4,9 @@
       {% for page in paginator.posts %}
         <li class="item  item--post">
           <article class="article  article--post">
-
             <h2><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h2>
             {% include post-meta.html %}
             {{ page.excerpt | markdownify | truncatewords: 60 }}
-
           </article>
         </li>
       {% endfor %}
@@ -18,16 +16,21 @@
 {% else %}
   <section class="section  typeset">
     <ul class="list  list--posts">
+      {% assign pageindex = page.pageindex %}
       {% for page in site.posts %}
-        <li class="item  item--post">
-          <article class="article  article--post">
-
-            <h2><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h2>
-            {% include post-meta.html %}
-            {{ page.excerpt | markdownify | truncatewords: 60 }}
-
-          </article>
-        </li>
+        {% if page.url contains pageindex %}
+          <li class="item  item--post">
+              <h2><a href="{{ site.baseurl }}{{ page.url }}">{{ page.title }}</a></h2>
+              {% include post-meta.html %}
+              <br/>{{ page.excerpt }}
+            </article>
+          </li>
+        <hr/>
+        {% endif %}
+        {% for each_navi in site.navigation_header %}
+          {% assign naviurl = each_navi.url %}
+          {% assign stripped_url = naviurl | remove: '/blog' %}
+        {% endfor %}
       {% endfor %}
     </ul>
   </section>
