--- a/docs/_layouts/categories.html
+++ b/docs/_layouts/categories.html
@@ -19,8 +19,7 @@ layout: default
     {% include post-categories.html %}
 
   </div>
-
-  {% if page.aside == true %}{% include site-aside.html align="left" %}{% endif %}
+  {% include site-aside.html align="left" %}
 
 </main>
 
