--- a/docs/_layouts/preview.html
+++ b/docs/_layouts/preview.html
@@ -12,13 +12,12 @@ layout: default
 
       {% if paginator.posts %}
         {% assign collectiondata = site.collections | where: "label", page.collectionpage | first %}
-        <h1>{{ collectiondata.title }}</h1>
-        {{ collectiondata.description | markdownify }}
-
+        <h5>{{ collectiondata.title }}</h5>
       {% else %}
         <h1>{{ page.title }}</h1>
-        {{ content }}
-
+        <p>
+        {{ page.excerpt }}
+        </p>
       {% endif %}
 
     </article>
