增加新文章

--- a/docs/_includes/site-aside.html
+++ b/docs/_includes/site-aside.html
@@ -18,6 +18,7 @@
     {% include nav-social.html %}
     <hr/>
     {% include site-search.html %}
+    {% include post-related.html %}
   {% endif %}
 
 </aside>
